[package]
name = "vulkan-sys"
version = "0.0.1"
edition = "2018"
build = "build.rs"
[package.metadata.system-deps]
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "vulkan_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[build-dependencies]
system-deps = "3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
